--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "is-empty": "^1.2.0",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
