--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "express-messages": "^1.0.1",
     "express-session": "^1.17.1",
-    "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.9.5",
@@ -27,8 +27,7 @@
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0",
-    "require-dir": "^1.2.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
