--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,10 @@
 version: "3.7"
 services:
-  client:
-    build: ./client
-    ports:
-      - "8082:3000"
-  server:
-    build: ./server
-    environment: 
-      - PORT=5000
-    ports:
-      - "8081:5000"
+  web:
+  build:
+  ports:
+  - "3001:3001"
   mongo:
     image: mongo
+    ports: "5000:27017"
 
